# iperf3-lib

./: .dockerignore  .gitignore  AGENTS.md  CONTRIBUTING.md  DOCKER_README.md  Dockerfile  Makefile  README.md  SECURITY.md  docker-entrypoint.sh  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
scripts/: validate_release.py
src/iperf3_lib/: __init__.py  capabilities.py  config.py  iperf_client.py  iperf_server.py  result.py
src/iperf3_lib/ffi/: api.py  symbols.py
src/py_iperf3/: __init__.py  capabilities.py  config.py  exceptions.py  libiperf_client.py  libiperf_server.py  result.py
src/py_iperf3/ffi/: api.py  symbols.py
tests/: conftest.py  debug_udp_run.py  inspect_lib_symbols.py  test_capabilities.py  test_client_async_and_result.py  test_client_branches.py  test_client_integration_configs.py  test_client_mocked.py  test_client_more.py  test_config.py  test_ffi_dlopen.py  test_ffi_load.py  test_public_api.py  test_server.py  test_server_additional.py  test_server_iteration.py  test_server_serve_once.py
tools/: README.md
