[build-system]
requires = ["hatchling>=1.31,<2"]
build-backend = "hatchling.build"

[project]
name = "iperf3-lib"
version = "0.2.0"
description = "Typed Python bindings for libiperf with synchronous and asynchronous APIs."
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [
    { name = "Dariusz Panas" },
]
keywords = [
    "iperf3",
    "network",
    "benchmark",
    "throughput",
    "SCTP",
    "libiperf",
    "cffi",
    "async",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: System :: Networking",
    "Topic :: System :: Benchmark",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "cffi>=2.0,<3",
    "pydantic>=2.12,<3",
]

[project.urls]
Homepage = "https://github.com/dariuszpanas/iperf3-lib"
Documentation = "https://github.com/dariuszpanas/iperf3-lib#readme"
Repository = "https://github.com/dariuszpanas/iperf3-lib"
Issues = "https://github.com/dariuszpanas/iperf3-lib/issues"
Changelog = "https://github.com/dariuszpanas/iperf3-lib#changelog"

[dependency-groups]
dev = [
    "pytest>=9.1,<10",
    "pytest-asyncio>=1.4,<2",
    "pytest-cov>=7.1,<8",
    "ruff>=0.15.22,<0.16",
    # ty is beta; review each upgrade before changing this exact pin.
    "ty==0.0.62",
]
release = [
    "check-wheel-contents>=0.6.3,<0.7",
    "twine>=6.2,<7",
]

[tool.uv]
required-version = "==0.11.31"

[tool.hatch.build.targets.wheel]
packages = ["src/iperf3_lib"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "A",    # flake8-builtins
    "C4",   # flake8-comprehensions
    "PIE",  # flake8-pie
    "D",    # pydocstyle (docstring enforcement)
]
ignore = ["E501"]

# Docstring enforcement: require docstrings for public modules, classes, and functions.
[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
known-first-party = ["iperf3_lib"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ty.environment]
python-version = "3.12"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short --strict-markers"
markers = [
    "integration: marks tests that require a local libiperf and may run iperf3",
]

[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*", "*/__pycache__/*"]

[tool.coverage.report]
fail_under = 90
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]

